codesplitted/CodeCuda/ERROR
decrypt.cu(68): error: calling a __device__ function("ascon_permutation(    ::ascon_state_t *, int)") from a __host__ __device__ function("ascon_initaead") is not allowed
      ascon_permutation(s, 12);
      ^

decrypt.cu(78): error: calling a __device__ function("_Z17ascon_permutation1?1?") from a __host__ __device__ function("ascon_adata") is not allowed
          ascon_permutation(s, 6);
          ^

decrypt.cu(86): error: calling a __device__ function("_Z17ascon_permutation1?1?") from a __host__ __device__ function("ascon_adata") is not allowed
      ascon_permutation(s, 6);
      ^

decrypt.cu(97): error: calling a __device__ function("_Z17ascon_permutation1?1?") from a __host__ __device__ function("ascon_decrypt") is not allowed
          ascon_permutation(s, 6);
          ^

decrypt.cu(114): error: calling a __device__ function("_Z17ascon_permutation1?1?") from a __host__ __device__ function("ascon_final") is not allowed
      ascon_permutation(s, 12);
      ^

5 errors detected in the compilation of "decrypt.cu".
